<resources>
    <string name="app_name">FireChat</string>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to Continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_new_account">Create New Account</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="add_image">Add Image</string>
    <string name="name">Name</string>
    <string name="select_user">Select User</string>
    <string name="type_a_message">Type a message</string>
    <string name="online">Online</string>
</resources>