<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="@dimen/_24ssp"
    android:scrollbars="none"
    tools:context=".activities.SignUpActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_10sdp"
            android:text="@string/create_new_account"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/_18ssp"
            android:textStyle="bold"
            android:fontFamily="@font/ubuntu_bold"/>

<!--        <TextView-->
<!--            android:layout_width="wrap_content"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_marginTop="@dimen/_4sdp"-->
<!--            android:text="Login to Continue"-->
<!--            android:textColor="@color/primary_dark"-->
<!--            android:textSize="@dimen/_12ssp"-->
<!--            android:textStyle="bold"-->
<!--            android:fontFamily="@font/ubuntu_bold"/>-->

        <FrameLayout
            android:id="@+id/layoutImage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp">

             <com.makeramen.roundedimageview.RoundedImageView
                 android:id="@+id/imageProfile"
                 android:layout_width="@dimen/_80sdp"
                 android:layout_height="@dimen/_80sdp"
                 android:background="@drawable/background_image"
                 android:scaleType="centerCrop"
                 app:riv_oval="true"/>

            <TextView
                android:id="@+id/addImageText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/add_image"
                android:textColor="@color/primary_dark"
                android:textSize="@dimen/_10sdp">

            </TextView>

        </FrameLayout>

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_40sdp"
            android:background="@drawable/background_input"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"/>

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/background_input"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textEmailAddress"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"/>

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/background_input"
            android:hint="@string/password"
            android:imeOptions="actionNext"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"
            tools:ignore="TextFields" />

        <EditText
            android:id="@+id/inputConfirmPassword"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_45sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:background="@drawable/background_input"
            android:hint="@string/confirm_password"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:paddingStart="@dimen/_16sdp"
            android:paddingEnd="@dimen/_16sdp"
            android:textColor="@color/primary_text"
            android:textSize="@dimen/_13ssp"/>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignUp"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp"
                android:layout_marginTop="@dimen/_20sdp"
                android:text="@string/sign_up"
                android:textColor="@color/white"
                android:textSize="@dimen/_13ssp"
                android:textStyle="bold"
                app:cornerRadius="@dimen/_8sdp"/>

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_24sdp"
                android:layout_height="@dimen/_24sdp"
                android:layout_gravity="center"
                android:visibility="invisible"
                android:indeterminate="true"
                android:indeterminateTintMode="src_atop"
                android:indeterminateTint="@color/primary"/>

        </FrameLayout>

        <TextView
            android:id="@+id/SignIn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/sign_in"
            android:fontFamily="@font/ubuntu_medium"
            android:textColor="@color/primary_dark"
            android:textSize="@dimen/_13ssp"
            style="bold"/>

    </LinearLayout>

</ScrollView>